--- a/package.json
+++ b/package.json
@@ -1,24 +1,25 @@
 {
-  "name": "next-warehousing-solutions",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "11.1.0",
-    "node-sass": "^6.0.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "sass": "^1.38.2"
-  },
-  "devDependencies": {
-    "@types/react": "17.0.19",
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.1.0",
-    "typescript": "4.4.2"
-  }
+	"name": "next-warehousing-solutions",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"isomorphic-unfetch": "^3.1.0",
+		"next": "11.1.0",
+		"normalize.css": "^8.0.1",
+		"react": "17.0.2",
+		"react-dom": "17.0.2",
+		"sass": "^1.38.2"
+	},
+	"devDependencies": {
+		"@types/react": "17.0.19",
+		"eslint": "7.32.0",
+		"eslint-config-next": "11.1.0",
+		"typescript": "4.4.2"
+	}
 }
