--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
 	},
 	"dependencies": {
 		"isomorphic-unfetch": "^3.1.0",
+		"mobx": "^6.3.2",
+		"mobx-react-lite": "^3.2.0",
 		"next": "11.1.0",
 		"normalize.css": "^8.0.1",
 		"react": "17.0.2",
