--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"mobx-react-lite": "^3.2.0",
 		"next": "11.1.0",
 		"normalize.css": "^8.0.1",
+		"rc-drawer": "^4.4.1",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
 		"sass": "^1.38.2"
