--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"run:image": "docker run -p 3000:3000 next-warehousing-solutions-container"
 	},
 	"dependencies": {
+		"final-form": "^4.20.2",
 		"isomorphic-unfetch": "^3.1.0",
 		"mobx": "^6.3.2",
 		"mobx-react-lite": "^3.2.0",
@@ -19,6 +20,8 @@
 		"rc-drawer": "^4.4.1",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
+		"react-final-form": "^6.5.3",
+		"react-toastify": "^8.0.2",
 		"sass": "^1.38.2"
 	},
 	"devDependencies": {
