--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
 		"sass": "^1.38.2"
 	},
 	"devDependencies": {
-		"@types/react": "17.0.19",
+		"@types/react": "^17.0.20",
 		"eslint": "7.32.0",
 		"eslint-config-next": "11.1.0",
-		"typescript": "4.4.2"
+		"typescript": "^4.4.2"
 	}
 }
